@@ -18,9 +18,13 @@
 
 """Handling CF grid mappings"""
 
-__all__=['CFProj','CFProj_aea','CFProj_lcc','getCFProj','copyCFMap']
+__all__=['CFProj','CFProj_aea','CFProj_lcc','getCFProj','copyCFMap','CFProj_parse_GMTproj','CFProj_printGMThelp']
 
 import proj, Numeric
+
+class DummyProj:
+    """Emptiy class for storing CF projection."""
+    pass
 
 class CFProj:
     def __init__(self,var):
@@ -64,6 +68,35 @@ class CFProj:
         wesn = proj.project(self.proj4_params(),Numeric.array([[ll[0],ur[0]],[ll[1],ur[1]]],Numeric.Float32),inv=True)
         return '%f/%f/%f/%fr'%(wesn[0,0],wesn[1,0],wesn[0,1],wesn[1,1])
 
+class CFProj_stere(CFProj):
+    """Stereographic Projections."""
+
+    def __init__(self,var):
+        """Initialise.
+        
+        var: CF grid mapping variable."""
+        CFProj.__init__(self,var)
+        self.params['proj'] = 'stere'
+        # polar variation
+        if var.grid_mapping_name == 'polar_stereographic':
+            self.params['lon_0'] = var.straight_vertical_longitude_from_pole[0]
+            self.params['lat_0'] = 90.
+        else: # others
+            self.params['lat_0'] = var.latitude_of_projection_origin[0]
+            self.params['lon_0'] = var.longitude_of_central_meridian[0]
+        self.params['k_0'] = var.scale_factor_at_projection_origin[0]
+        self.gmt_type = 's'
+
+    def getGMTprojection(self):
+        """Get GMT projection string."""
+
+        if 'k_0' in self.params:
+            return '%s%f/%f/%f'%(self.gmt_type,
+                              self.params['lon_0'],self.params['lat_0'],self.params['k_0'])
+        else:
+            return '%s%f/%f'%(self.gmt_type,
+                              self.params['lon_0'],self.params['lat_0'])    
+        
 class CFProj_laea(CFProj):
     """Lambert Azimuthal Equal Area"""
     def __init__(self,var):
@@ -123,7 +156,9 @@ def getCFProj(var):
     
     CFProj_MAP = {'lambert_azimuthal_equal_area' : CFProj_laea,
                   'albers_conical_equal_area' : CFProj_aea,
-                  'lambert_conformal_conic' : CFProj_lcc}
+                  'lambert_conformal_conic' : CFProj_lcc,
+                  'polar_stereographic' : CFProj_stere,
+                  'stereographic' : CFProj_stere}
 
     if var.grid_mapping_name not in CFProj_MAP:
         raise KeyError, 'Error, no idea how to handle projection: %s'%var.grid_mapping_name
@@ -145,5 +180,65 @@ def copyCFMap(orig,copy):
         copy.false_easting = orig.false_easting
     if 'false_westing' in dir(orig):
         copy.false_westing = orig.false_westing
+    if 'straight_vertical_longitude_from_pole' in dir(orig):
+        copy.straight_vertical_longitude_from_pole = orig.straight_vertical_longitude_from_pole
+    if '' in dir(orig):
+        copy.scale_factor_at_projection_origin = orig.scale_factor_at_projection_origin
 
-        
+def CFProj_parse_GMTproj(projstring):
+    """Parse GMT projection string."""
+
+    proj = DummyProj()
+    
+    ps = projstring[1:].split('/')
+    if projstring[0] in ['b','B']:
+        if len(ps) != 4:
+            print 'Error, wrong number of projection arguments'
+            usage()
+            sys.exit(1)
+        proj.grid_mapping_name='albers_conical_equal_area'
+        proj.longitude_of_central_meridian = [float(ps[0])]
+        proj.latitude_of_projection_origin = [float(ps[1])]
+        proj.standard_parallel = [float(ps[2]),float(ps[3])]
+    elif projstring[0] in ['l','L']:
+        if len(ps) != 4:
+            print 'Error, wrong number of projection arguments'
+            usage()
+            sys.exit(1)
+        proj.grid_mapping_name='lambert_conformal_conic'
+        proj.longitude_of_central_meridian = [float(ps[0])]
+        proj.latitude_of_projection_origin = [float(ps[1])]
+        proj.standard_parallel = [float(ps[2]),float(ps[3])]
+    elif projstring[0] in ['a','A']:
+        if len(ps) != 2:
+            print 'Error, wrong number of projection arguments'
+            usage()
+            sys.exit(1)
+        proj.grid_mapping_name='lambert_azimuthal_equal_area'
+        proj.longitude_of_central_meridian = [float(ps[0])]
+        proj.latitude_of_projection_origin = [float(ps[1])]
+    elif projstring[0] in ['s','S']:
+        if len(ps) == 2 or len(ps) == 3:
+            proj.grid_mapping_name='stereographic'
+            proj.longitude_of_central_meridian = [float(ps[0])]
+            proj.latitude_of_projection_origin = [float(ps[1])]
+            if len(ps) == 3:
+                proj.scale_factor_at_projection_origin = [float(ps[2])]
+            else:
+                proj.scale_factor_at_projection_origin = [1.]
+        else:
+            print 'Error, wrong number of projection arguments'
+            usage()
+            sys.exit(1)
+    else:
+        print 'Error, no idea about projection: ',projstring
+        usage()
+        sys.exit(1)
+    return proj
+
+def CFProj_printGMThelp():
+    print '  -Jspec\n\tGMT like projection specification'
+    print '\t  -Jalon0/lat0\n\t      Lambert Azimuthal Equal Area. Give projection center'
+    print '\t  -Jblon0/lat0/lat1/lat2\n\t      Albers Equal-Area Conic. Give projection center and\n\t      two  standard  parallels.'
+    print '\t  -Jllon0/lat0/lat1/lat2\n\t      Lambert Conic Conformal. Give projection center and\n\t      two  standard  parallels.'
+    print '\t  -Jslon0/lat0[/scale]\n\t      Stereographic projection. Give projection center and\n\t      optionally scale at projection center.'
